crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__reference_actions_snapshot@reference_actions_Jpa.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
import jakarta.persistence.*;

@Entity
@Table(name = "users")
public class Users {

    @Id
    @Column(name = "id")
    private Integer id;

    protected Users() {
    }
}

import jakarta.persistence.*;

@Entity
@Table(name = "posts")
public class Posts {

    @Id
    @Column(name = "id")
    private Integer id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "user_id", nullable = false)
    private Users user;

    protected Posts() {
    }
}

import jakarta.persistence.*;

@Entity
@Table(name = "comments")
public class Comments {

    @Id
    @Column(name = "id")
    private Integer id;

    @ManyToOne(fetch = FetchType.LAZY)
    @JoinColumn(name = "post_id")
    private Posts post;

    protected Comments() {
    }
}
