crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__reference_actions_snapshot@reference_actions_Prisma.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
model Users {
  id Int @id
  posts Posts[]

  @@map("users")
}

model Posts {
  id Int @id
  user_id Int
  user Users @relation(fields: [user_id], references: [id], onDelete: Cascade, onUpdate: Restrict)
  comments Comments[]

  @@map("posts")
}

model Comments {
  id Int @id
  post_id Int?
  post Posts? @relation(fields: [post_id], references: [id], onDelete: SetDefault, onUpdate: NoAction)

  @@map("comments")
}
