crates/vespertide-exporter/src/tests/snapshots/vespertide_exporter__tests__reference_actions_snapshot@reference_actions_SqlModel.snap
---
source: crates/vespertide-exporter/src/tests/mod.rs
expression: rendered
---
from __future__ import annotations

from typing import Optional

from sqlmodel import Field, SQLModel


class Users(SQLModel, table=True):
    __tablename__ = "users"

    id: int = Field(primary_key=True)

class Posts(SQLModel, table=True):
    __tablename__ = "posts"

    id: int = Field(primary_key=True)
    user_id: int = Field(foreign_key="users.id")

class Comments(SQLModel, table=True):
    __tablename__ = "comments"

    id: int = Field(primary_key=True)
    post_id: Optional[int] = Field(default=None, foreign_key="posts.id")
